syntax = "proto3";

package wallet.v1;

import "google/protobuf/empty.proto";

service WalletService {
    // rpc Get (GetRequest) returns (GetResponse);
    rpc List (google.protobuf.Empty) returns (ListResponse);
    rpc Track (TrackRequest) returns (google.protobuf.Empty);
    rpc Untrack (UntrackRequest) returns (google.protobuf.Empty);
}

message Wallet {
    // required
    optional string name = 1;
    // required
    optional string address = 2;
    // required
    optional double balance = 3;
}

message GetRequest {
    // required
    optional string name = 1;
}

message GetResponse {
    // required
    optional Wallet wallet = 1;
}

message ListResponse {
    repeated Wallet wallet = 1;
}

message TrackRequest {
    // required
    optional string name = 1;
    // required
    optional string address = 2;
}

message UntrackRequest {
    // required
    optional string name = 1;
}
